add some new features